test/workloads/policy/replication.yaml
include:
  - groups: [admissionregistration.k8s.io]
    names: [replicove-probe-label]
helmReleases:
  - namespace: source-dev
    name: fixture
